Keyframing one transform option reset other transforms #58721

Closed
opened 2018-12-04 16:49:08 +01:00 by Alexander Otto · 27 comments

System Information
Operating system: Windows 10
Graphics card: 2x 1080 Ti

Blender Version
Broken: 2.80, 1b6a394d86, 2018-12-03 23:39

Short description of error
If you have an animated object, lets say location and rotation have keyframes, and you animate (not keyframe) both location and rotation further down the line, and then decide to keyframe location by Shortcut I -> Location or Right Click on the property, the other property gets reset to the last known value.
Yes I could keyframe both properties at the same time but that behavior is still odd.

Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file (as simple as possible).

**System Information** Operating system: Windows 10 Graphics card: 2x 1080 Ti **Blender Version** Broken: 2.80, 1b6a394d862, 2018-12-03 23:39 **Short description of error** If you have an animated object, lets say location and rotation have keyframes, and you animate (not keyframe) both location and rotation further down the line, and then decide to keyframe location by Shortcut I -> Location or Right Click on the property, the other property gets reset to the last known value. Yes I could keyframe both properties at the same time but that behavior is still odd. **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file (as simple as possible).
Author

Added subscriber: @AlexanderOtto

Added subscriber: @AlexanderOtto

#62453 was marked as duplicate of this issue

#62453 was marked as duplicate of this issue

#62344 was marked as duplicate of this issue

#62344 was marked as duplicate of this issue

#61173 was marked as duplicate of this issue

#61173 was marked as duplicate of this issue

#62082 was marked as duplicate of this issue

#62082 was marked as duplicate of this issue

#62054 was marked as duplicate of this issue

#62054 was marked as duplicate of this issue

#61812 was marked as duplicate of this issue

#61812 was marked as duplicate of this issue

#59820 was marked as duplicate of this issue

#59820 was marked as duplicate of this issue

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Joshua Leung was assigned by Sebastian Parborg 2018-12-14 18:36:17 +01:00

This did not happen in 2.79. So this is a regression.

This did not happen in 2.79. So this is a regression.

Added subscriber: @user1

Added subscriber: @user1

Added subscribers: @jefrau, @Mets

Added subscribers: @jefrau, @Mets

This also happens with multiple keyed bones #61812.

This also happens with multiple keyed bones #61812.
Member

Added subscriber: @Rado.N

Added subscriber: @Rado.N
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

@Rado.N, feel free to post that video here again, thanks for that.

@Rado.N, feel free to post that video here again, thanks for that.

Posting the video of the problem as suggested by @JacquesLucke.
Just to clarify this is not limited to location only.

Rep 01.mp4

Posting the video of the problem as suggested by @JacquesLucke. Just to clarify this is not limited to location only. [Rep 01.mp4](https://archive.blender.org/developer/F6731778/Rep_01.mp4)
Member

Added subscriber: @ShunsukeSaito

Added subscriber: @ShunsukeSaito
Member
Added subscribers: @CultLess, @JoshuaLeung, @s.barbieri, @ditos, @brecht
Member
Added subscribers: @netricsa, @MarcinTwarowski, @WilliamReynish

Added subscriber: @larsdd_b

Added subscriber: @larsdd_b

Added subscriber: @Sergey

Added subscriber: @Sergey

#61173#628747 has some analysis of the problem.

Animation is being evaluated after inserting a keyframe, since 06357b23a2. I think we need a way to DEG tag an action datablock to say that it needs copy-on-write without evaluating animation, and use that for inserting and deleting keyframes. For other cases like graph editor keyframe editing we still need to tag for both copy-on-write and animation evaluation.

CC @Sergey

#61173#628747 has some analysis of the problem. Animation is being evaluated after inserting a keyframe, since 06357b23a2. I think we need a way to DEG tag an action datablock to say that it needs copy-on-write without evaluating animation, and use that for inserting and deleting keyframes. For other cases like graph editor keyframe editing we still need to tag for both copy-on-write and animation evaluation. CC @Sergey

@brecht, think proper solution is something like this P937

Short description:

  • Don't use ID_RECALC_COPY_ON_WRITE unless ABSOLUTELY needed. There are better suitable flags, and tagging should not really depend on a specifics of dependency graph behavior.
  • Introduce recalc flag ID_RECALC_ANIMATION_BLOCK which internally does Copy-on-Write,making sure all datablocks are a relevant state, but does not force animation to be evaluated.
    Used in aniomation edits which are adding/removing f-curves, without affecting on the current value of corresponding property.
  • Use ID_RECALC_ANIMATION when animation is to be re-evaluated. For example, when adding/removing f-curve modifier.

I did my best updating the tagging in animation editor folder, but don't mind if someone else have a second look at the changes.

@brecht, think proper solution is something like this [P937](https://archive.blender.org/developer/P937.txt) Short description: - Don't use `ID_RECALC_COPY_ON_WRITE` unless ABSOLUTELY needed. There are better suitable flags, and tagging should not really depend on a specifics of dependency graph behavior. - Introduce recalc flag `ID_RECALC_ANIMATION_BLOCK` which internally does Copy-on-Write,making sure all datablocks are a relevant state, but does not force animation to be evaluated. Used in aniomation edits which are adding/removing f-curves, without affecting on the current value of corresponding property. - Use `ID_RECALC_ANIMATION` when animation is to be re-evaluated. For example, when adding/removing f-curve modifier. I did my best updating the tagging in animation editor folder, but don't mind if someone else have a second look at the changes.

Seems reasonable.

Perhaps ID_RECALC_ANIMATION_BLOCK can be renamed to ID_RECALC_ANIMATION_COPY_ONLY or ID_RECALC_ANIMATION_NO_EVAL? The BLOCK name doesn't really tell me anything.

I think the DEG_id_tag calls in rna_fcurve.c and rna_action.c need to be updated still?

Seems reasonable. Perhaps `ID_RECALC_ANIMATION_BLOCK` can be renamed to `ID_RECALC_ANIMATION_COPY_ONLY` or `ID_RECALC_ANIMATION_NO_EVAL`? The `BLOCK` name doesn't really tell me anything. I think the `DEG_id_tag` calls in `rna_fcurve.c` and `rna_action.c` need to be updated still?

This issue was referenced by 0e9ea707b5

This issue was referenced by 0e9ea707b5e5be2a38dd29dded3dd6c25a5e1992

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58721
No description provided.